# LTE-PRACH-preamble-detection-algorithm-

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
example/: example.cpp
include/: channel.hpp  prach.hpp  transceiver.hpp
lib/cprefix/: cprefix.cpp  cprefix.hpp
lib/crosscorr/: crosscorr.cpp  crosscorr.hpp
lib/fft/: fft.cpp  fft.hpp  ifft.cpp  ifft.hpp
lib/math/: zc_fft.property.hpp  zc_fft_property.cpp  zc_generator.cpp  zc_generator.hpp
lib/prach/: generator.hpp
lib/prach/format/: base.hpp  lte_format0.hpp
lib/prach/method/: direct_method.hpp  hybrid_method.hpp
scripts/: plot_crosscorr.py
src/: channel.cpp  example.cpp  prach_format0_generator.cpp  transceiver.cpp
src/math/: zc_generator.cpp  zc_generator.hpp
tests/: test_cprefix.cpp  test_crosscorr.cpp  test_utils.hpp  test_zc_fft_property.cpp
